# pyab3p

./: .dockerignore  .gitattributes  .gitignore  README.md  main.cpp  path_Ab3P  pyproject.toml  setup.py
.github/workflows/: publish.yaml  test.yaml
WordData/: cshset_wrdset3.ha  hshset_Lf1chSf.ha  hshset_Lf1chSf.nm  hshset_stop.nm  stop
ab3p_source/: Ab3P.cpp  Ab3P.h  AbbrStra.cpp  AbbrStra.h  AbbrvE.cpp  AbbrvE.h  Dmap.h  Doc.h  FBase.cpp  FBase.h  Hash.cpp  Hash.h  Index.h  MPtok.cpp  MPtok.h  Strset.cpp  Strset.h  runn.cpp  runn.h
tests/: conftest.py  hunflair_ab3p.py  test_data.py  test_properties.py
tests/data/: bio-large-output.json  bio-output.json  texts.txt
word_data/: Lf1chSf  cshset_wrdset3.ad  cshset_wrdset3.ct  cshset_wrdset3.nm  cshset_wrdset3.str  hshset_Lf1chSf.ad  hshset_Lf1chSf.str  hshset_stop.ad  hshset_stop.ha  hshset_stop.str
