[build-system]
requires = ["setuptools>=42", "wheel", "pybind11~=2.11.1"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "regression: marks tests as regression tests, which rely on the original ab3p that is not available on all versions (deselect with '-m \"not regression\"')",
    "serial",
]

[tool.cibuildwheel]
skip = "pp*"

before-test = "pip install -r requirements-test.txt"
test-command = "pytest -vv -k \"not slow and not regression\" {project}"